bug-066426 - Error message not showing if any message error occurred while login into mobile device

--- a/application/views/css/frontend-ltr.css
+++ b/application/views/css/frontend-ltr.css
@@ -2,7 +2,6 @@
 .header {
   left: 0;
   right: 0;
-  position: -webkit-sticky;
   position: sticky;
   top: 0;
   -webkit-transition: all 0.5s;
@@ -15,7 +14,6 @@
       width: 100%; } }
   @media (max-width: 1199px) {
     .header {
-      position: -webkit-sticky;
       position: sticky;
       top: 0; } }
   @media (min-width: 1199px) {
@@ -1610,7 +1608,6 @@ p {
     .section-filters {
       background-color: rgba(0, 0, 0, 0.03);
       padding: 5rem 0 0;
-      position: -webkit-sticky;
       position: sticky;
       z-index: 1;
       margin-bottom: 3rem;
@@ -6075,7 +6072,6 @@ body.sort-active {
 .group-secondary {
   text-align: center;
   border: 1px solid var(--color-gray-300);
-  position: -webkit-sticky;
   position: sticky;
   top: 144px; }
   @media (min-width: 1299px) {
@@ -6434,7 +6430,6 @@ body.sort-active {
 
 @media (min-width: 767px) {
   .sticky-side-panel {
-    position: -webkit-sticky;
     position: sticky;
     top: 60px;
     z-index: 1; } }
@@ -7471,7 +7466,6 @@ body.sort-active {
 
 @media (mIN-width: 1199px) {
   .blog-sidebar {
-    position: -webkit-sticky;
     position: sticky;
     top: 115px; } }
 
@@ -8272,7 +8266,6 @@ body.sort-active {
     width: 100%; } }
 
 .profile-secondary .right-panel {
-  position: -webkit-sticky;
   position: sticky;
   top: 60px; }
 
@@ -8662,7 +8655,6 @@ body.sort-active {
 .section--mission {
   background: var(--color-gray-100); }
   .section--mission .primary-content {
-    position: -webkit-sticky;
     position: sticky;
     top: 140px; }
 
