--- a/dashboard/views/css/dashboard-ltr.css
+++ b/dashboard/views/css/dashboard-ltr.css
@@ -187,7 +187,6 @@ p {
     display: -ms-flexbox;
     display: flex;
     height: 100%;
-    position: -webkit-sticky;
     position: sticky;
     top: 0;
     bottom: 0;
@@ -1760,7 +1759,6 @@ iframe#st_gdpr_iframe {
   background-color: var(--color-white); }
 
 .table-sticky-scroll .first-child {
-  position: -webkit-sticky;
   position: sticky;
   left: 0;
   z-index: 2;
@@ -2141,7 +2139,6 @@ div.tagsinput div {
   @media (min-width: 1399px) {
     .dashboard .dashboard__secondary {
       max-width: 25.6rem;
-      position: -webkit-sticky;
       position: sticky;
       top: 0;
       bottom: 0;
@@ -2152,7 +2149,6 @@ div.tagsinput div {
   @media (min-width: 1299px) and (max-width: 1399px) {
     .dashboard .dashboard__secondary {
       max-width: 22rem;
-      position: -webkit-sticky;
       position: sticky;
       top: 0;
       bottom: 0;
@@ -2781,7 +2777,6 @@ div.tagsinput div {
   padding: var(--padding-5); }
   @media (min-width: 1199px) {
     .page-controls {
-      position: -webkit-sticky;
       position: sticky;
       top: 0; } }
 
